# caikit-tgis-serving

./: .coveragerc  .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .pylintrc  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.s390x  Makefile  OWNERS  README.md  caikit-servingruntime.yaml  caikit.yml  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  delete-stale-primages.yaml  dependabot-autoapprove.yaml  kserve-test.yml  poetry-refresh.yml  pr-close-image-delete.yaml  run-update.yml  smoke-test.yml
.tekton/: caikit-tgis-serving-28-pull-request.yaml  caikit-tgis-serving-28-push.yaml  caikit-tgis-serving-odh-poc-pull-request.yaml  caikit-tgis-serving-odh-poc-push.yaml
caikit/: Pipfile  start-serving.sh
caikit/config/: caikit-tgis.template.yml
caikit_tgis_backend/: __init__.py  generation.proto  load_balancing_client.py  load_balancing_proxy.py  managed_tgis_subprocess.py  tgis_backend.py  tgis_connection.py
caikit_tgis_backend/protobufs/: __init__.py  generation_pb2.py  generation_pb2_grpc.py
demo/kserve/: .gitignore  Kserve.md  OSSM-enabled.md  README.md  built-tip.md  metrics.md  (+9 more)
docs/: README.md  caikit-isvc.yaml  caikit-servingruntime.yaml
scripts/: gen_tgis_protos.sh
test/: .gitignore  Dockerfile  docker-compose.yml  smoke-test.py  smoke-test.sh
tests/: conftest.py  test_load_balancing_client.py  test_load_balancing_proxy.py  test_tgis_backend.py  test_tgis_connection.py  tgis_mock.py
utils/: convert.py  wait-modelcar.sh
(+117 files in other folders)
